force-app/main/default/objects/Customer_Consent__c.object
<CustomObject>
    <description>Stores communication consent.</description>
    <label>Customer Consent</label>
    <nameField>
        <displayFormat>CC-{0000000}</displayFormat>
        <label>Consent ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Consents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Consents</relationshipLabel>
        <relationshipName>Customer_Consents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Recording__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Recording</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WhatsApp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WhatsApp</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>